# Dynamo-News-Py

./: .gitignore  .python-version  bump_version.py  clear_build.py  comment.bat  pyproject.toml
.github/workflows/: python-publish.yml  version-release.yml
dynamo_news/: __init__.py  api.py  constant.py  db.py  funcs.py  http.py  math.py  models.py  news.py  pair_info.py  plot.py  schedulers.py  scrapper.py  sender.py
scripts/: version.py
